--- a/frontend.html
+++ b/frontend.html
@@ -124,11 +124,11 @@
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://docplanner.workable.com/j/C1F8310635'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
+<h5><a href='https://docplanner.workable.com/j/C1F8310635'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://docplanner.workable.com/j/C4A0A56403'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
+<h5><a href='https://docplanner.workable.com/j/C4A0A56403'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -136,7 +136,7 @@
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dataguard.join.com/jobs/273365-praktikum-frontend-developer-m-w-d'>Job @ DataGuard (Munich): Praktikum Frontend Devel... | JOIN</a></h5> 
+<h5><a href='https://dataguard.join.com/jobs/273365-praktikum-frontend-developer-m-w-d'>Job @ DataGuard (Munich): Praktikum Frontend Devel... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -148,7 +148,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/daveramsey/job/o0IDafwf'>Ramsey Solutions Careers - Senior Frontend Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/daveramsey/job/o0IDafwf'>Ramsey Solutions Careers - Senior Frontend Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Our technology teams are growing, and we're hiring a Senior Frontend Engineer. 
 If you're looking for a career with a purpose, you've come to the right place.</p>
@@ -172,7 +172,7 @@ software engineers and academics implementing change in the financial industry
 <p>3 days ago ... Frontend Engineer. Bengaluru, Karnataka | Full time. Apply Now. SpotDraft is 
 built as a Single Page App using Angular (2+) and React application. We are?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oP7A8fwo&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=njCSVLwY'>Guidewire Software, Inc. Careers - Senior Software Engineer, Front End - Krakow, Poland</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oP7A8fwo&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=njCSVLwY'>Guidewire Software, Inc. Careers - Senior Software Engineer, Front End - Krakow, Poland</a></h5> 
 <p><span class="badge badge-light">Krakow, Poland</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -184,7 +184,7 @@ built as a Single Page App using Angular (2+) and React application. We are?...<
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4370690002'>Job Application for Frontend Engineer - Discovery at Twitch</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twitch/jobs/4370690002'>Job Application for Frontend Engineer - Discovery at Twitch</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -382,7 +382,7 @@ published: 19.06.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/behalf/8ec61523-1686-4e39-831a-8006e63bb17f'>Behalf - Senior Frontend Engineer - Core</a></h5> 
+<h5><a href='https://jobs.lever.co/behalf/8ec61523-1686-4e39-831a-8006e63bb17f'>Behalf - Senior Frontend Engineer - Core</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... ... you'll use the latest frontend technologies to create the best development 
 experience for our developers, you'll help to build awesome UX, you'll architect 
@@ -420,7 +420,7 @@ the?...</p>
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692241690-it-developer-front-end-'>Ubisoft IT Developer ( Front-end) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692241690-it-developer-front-end-'>Ubisoft IT Developer ( Front-end) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Montreal, QCCanada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
